copy installer to memory to survive after chip erase

--- a/arm5/ossw-installer.uvprojx
+++ b/arm5/ossw-installer.uvprojx
@@ -47,7 +47,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\_build\</OutputDirectory>
-          <OutputName>ossw-install</OutputName>
+          <OutputName>ossw-installer</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
@@ -309,7 +309,7 @@
               </OCR_RVCT3>
               <OCR_RVCT4>
                 <Type>1</Type>
-                <StartAddress>0x36000</StartAddress>
+                <StartAddress>0x20002000</StartAddress>
                 <Size>0x2000</Size>
               </OCR_RVCT4>
               <OCR_RVCT5>
@@ -334,7 +334,7 @@
               </OCR_RVCT8>
               <OCR_RVCT9>
                 <Type>0</Type>
-                <StartAddress>0x20002000</StartAddress>
+                <StartAddress>0x20000000</StartAddress>
                 <Size>0x2000</Size>
               </OCR_RVCT9>
               <OCR_RVCT10>
