--- a/arm5/ossw-jump.uvprojx
+++ b/arm5/ossw-jump.uvprojx
@@ -47,7 +47,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\_build\</OutputDirectory>
-          <OutputName>flashwrite_example_arm</OutputName>
+          <OutputName>ossw-jump</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
