--- a/arm5/ossw-installer.uvprojx
+++ b/arm5/ossw-installer.uvprojx
@@ -347,7 +347,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>1</Optim>
+            <Optim>4</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -437,6 +437,16 @@
               <FileName>boards.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\boards.h</FilePath>
+            </File>
+            <File>
+              <FileName>mlcd.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\mlcd.c</FilePath>
+            </File>
+            <File>
+              <FileName>mlcd.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\mlcd.h</FilePath>
             </File>
           </Files>
         </Group>
